--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -88,6 +88,8 @@ a.btn-add-widget {
   line-height: 35px;
   width: 35px;
   height: 35px;
+  z-index: 1000;
+  background-color: rgba(8, 31, 44, 0.15);
 }
 
 .modal-dialog {
