--- a/client/templates/dashboards.html
+++ b/client/templates/dashboards.html
@@ -54,6 +54,8 @@
           </label>
         </div>
         {{/if}}
+      </div>
+      <div class="modal-footer">
         <button class="btn btn-primary save-settings">Save</button>
       </div>
     </div>
