--- a/packages/embed/client/widget.css
+++ b/packages/embed/client/widget.css
@@ -1,6 +1,17 @@
 .widget.embed .widget-body {
+  padding: 0;
   text-align: center;
+  position: relative;
+  overflow: hidden;
 }
+.widget.embed .widget-body > iframe {
+  box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.3);
+  border: 0;
+  position: absolute;
+  top: 47%;
+  transform: translate(-50%, -50%);
+}
+/*
 .widget.embed {
   background-color: rgba(255, 255, 255, 0.05);
 }
@@ -10,3 +21,4 @@
 .embed .title-bar .buttons a {
   color: #DADADA;
 }
+*/
