--- a/packages/herdict/client/widget.css
+++ b/packages/herdict/client/widget.css
@@ -2,8 +2,11 @@
   font-weight: normal;
   font-size: 1.1em;
 }
+.herdict h1 {
+  margin-bottom: 0;
+}
 .herdict li {
-  margin-bottom: 0.8em;
+  margin-bottom: 0.7em;
 }
 .herdict ol {
   list-style-type: none;
@@ -18,4 +21,7 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   font-size: 0.8em;
+}
+.herdict .subtitle {
+  margin-bottom: 0;
 }
