--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -26,6 +26,7 @@
     background-color: rgba(236, 236, 236, 0.6);
     z-index: 10;
     cursor: move;
+    white-space: nowrap;
 
     .buttons {
       padding-left: 4px;
@@ -56,6 +57,11 @@
       padding-right: 6px;
       float: right;
       z-index: 1000;
+      pointer-events: none;
+
+      a {
+        pointer-events: auto;
+      }
     }
   }
 
