--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -19,6 +19,12 @@
     font-size: 1.6em;
     margin-bottom: 0.4em;
   }
+  h3 {
+    margin-top: 0.2em;
+    font-size: 1.4em;
+    margin-bottom: 0.4em;
+    color: #666;
+  }
 
 
   .title-bar {
