--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -1,6 +1,6 @@
 <template name="Footer">
 <footer>
-  <img alt="" class="footer-logo" src="/imon_logo_small.png">
+  <a href="https://thenetmonitor.org"><img alt="" class="footer-logo" src="/imon_logo_small.png"></a>
   <a href="http://cyber.law.harvard.edu" title="Berkman Center For Internet and Society" class="berkman-link"></a>
   <nav>
     <ul>
