--- a/packages/embed/client/widget.css.less
+++ b/packages/embed/client/widget.css.less
@@ -1,4 +1,8 @@
 .widget.embed {
+  .widget-body > p {
+    font-size: 1.2em;
+    margin: 1.5em;
+  }
   &.resize-reflow {
     .widget-body {
       padding: 0;
