--- a/packages/feed/client/widget.css.less
+++ b/packages/feed/client/widget.css.less
@@ -1,4 +1,9 @@
 .feed {
+  .feed-no-feed {
+    font-size: 1.2em;
+    margin: 1.5em;
+  }
+
   .feed-item {
     padding: 0.3em 2em 0.6em;
     margin: 0 -20px;
