--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -1,17 +1,20 @@
 @import url(//fonts.googleapis.com/css?family=Lato:100,300,400,700);
 
 body {
-  /*background-image: url(../images/backdrop4.jpg);
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -moz-background-size: cover;*/
   background-color: #081F2C;
-  /*padding: 20px;*/
   font-family: Lato;
   font-weight: 300;
-  overflow-y: scroll;
+
+  &.dashboardsshow {
+    overflow-y: scroll;
+    padding-top: 50px;
+  }
+
+  &.widgetsembed {
+    background-color: transparent;
+  }
 }
+
 h1, h2, h3 {
   font-weight: 300;
 }
