fix account layout

--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -4,14 +4,13 @@ body {
   background-color: #081F2C;
   font-family: Lato;
   font-weight: 300;
-
-  &.dashboardsshow {
-    overflow-y: scroll;
-    padding-top: 50px;
-  }
+  padding-top: 50px;
+  overflow-y: scroll;
 
   &.widgetsembed {
     background-color: transparent;
+    padding-top: 0;
+    overflow-y: hidden;
   }
 }
 
