--- a/client/templates/account.html
+++ b/client/templates/account.html
@@ -1,6 +1,6 @@
 <template name="Account">
 <div class="container">
-  <div class="col-sm-6 col-md-offset-3">
+  <div class="col-sm-6 col-sm-offset-3">
     <div class="panel panel-default">
       <div class="panel-body">
         {{> atForm }}
