--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -20,10 +20,10 @@
               Sign Out
             </button>
           {{else}}
-            <a href="/accounts/sign-in" class="btn btn-primary navbar-btn">
+            <a href="/users/sign-in" class="btn btn-primary navbar-btn">
               Sign In
             </a>
-            <a href="/accounts/sign-up" class="btn btn-info navbar-btn">
+            <a href="/users/sign-up" class="btn btn-info navbar-btn">
               Sign Up
             </a>
           {{/if}}
