dashboard and profile pages

--- a/client/css/header.css.less
+++ b/client/css/header.css.less
@@ -12,6 +12,9 @@ header {
       a {
         margin-right: 5px;
       }
+      .new-dashboard {
+        float: left;
+      }
     }
 
     .logo-image {
