user profile pages and dashboard titles - #12566, #12565

--- a/client/templates/user_dashboards.html
+++ b/client/templates/user_dashboards.html
@@ -6,7 +6,9 @@
       <ul class="list-unstyled">
       {{# each dashboards }}
       <li>
-        <a href="{{ pathFor route='dashboards.show' data=dashParams }}">Dashboard</a>
+        <a href="{{ pathFor route='dashboards.show' data=dashParams }}">
+          {{ title }}
+        </a>
       </li>
       {{else}}
         <li>
