add selecting mode - #12615

--- a/client/css/add_widget.css.less
+++ b/client/css/add_widget.css.less
@@ -65,6 +65,9 @@
 .checkbox-big input[type="checkbox"]:checked + label::before {
   box-shadow: none;
 }
+.checkbox-big input[type="checkbox"] {
+  cursor: pointer;
+}
 .checkbox.checkbox-big label::after {
   width: 20px;
   height: 20px;
