--- a/client/templates/dashboards.html
+++ b/client/templates/dashboards.html
@@ -22,6 +22,7 @@
     {{/each}}
   </ul>
 </div>
+<a href="#" id="toggle-selecting" class="btn btn-danger">Toggle Selecting</a>
 {{# if editable }}
   {{> DashboardsSettings }}
   {{> DashboardsAdd }}
