--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -96,6 +96,29 @@ body.widgetsembed {
       background-color: rgba(255, 255, 255, 0.8);
     }
   }
+
+  .selecting-cover {
+    z-index: 1005;
+    background-color: rgba(100, 100, 100, 0.3);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+
+    .select-check {
+      position: absolute;
+      right: 20px;
+      top: 25px;
+
+      label::before {
+        box-shadow: 0 0 25px 3px white;
+      }
+      input[type="checkbox"]:checked + label::before {
+        box-shadow: 0 0 10px 2px white;
+      }
+    }
+  }
 }
 
 .popover {
