--- a/client/templates/add_widget.html
+++ b/client/templates/add_widget.html
@@ -1,5 +1,6 @@
 <template name="DashboardsAdd">
-<a href="#" class="btn-add-widget dash-btn" data-toggle="modal" data-target=".add-widget-modal">
+<a href="#" class="btn-add-widget dash-btn" data-toggle="modal"
+   title="Add Widgets" data-target=".add-widget-modal">
   <span class="glyphicon glyphicon-plus"></span>
 </a>
 
