add country setting, country info - #10755

--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -80,6 +80,12 @@ a.btn-add-widget {
     color: #65A8E5;
     border-color: #65A8E5;
   }
+
+  &.active {
+    background-color: #FDFDA9;
+    color: #E6B604;
+    border-color: #E6B604;
+  }
 }
 
 .btn-dash-settings {
@@ -102,12 +108,17 @@ a.btn-add-widget {
   width: 35px;
   height: 35px;
   z-index: 1000;
+}
 
-  &.duplicating {
-    background-color: #FDFDA9;
-    color: #E6B604;
-    border-color: #E6B604;
-  }
+.btn-dash-set-country {
+  position: fixed;
+  bottom: 196px;
+  right: 15px;
+  font-size: 14px;
+  line-height: 32px;
+  width: 35px;
+  height: 35px;
+  z-index: 1000;
 }
 
 .alert {
