--- a/client/templates/dashboards.html
+++ b/client/templates/dashboards.html
@@ -24,6 +24,10 @@
 </div>
 {{# if editable }}
   {{# unless noWidgets }}
+  <a href="#" class="btn-dash-set-country dash-btn {{ settingCountryState }}"
+     title="{{ settingCountryTitle }}">
+    <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
+  </a>
   <a href="#" class="btn-dash-duplicate dash-btn {{ duplicatingState }}"
      title="{{ duplicatingTitle }}">
     <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
@@ -38,6 +42,28 @@
         <span aria-hidden="true">&times;</span>
       </button>
       Select the widgets you want to copy and click the button again to finish.
+    </div>
+  {{/if}}
+
+  {{# if settingCountry }}
+    <div class="alert alert-warning alert-dismissable" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      <ol class="list-unstyled">
+        <li>
+          Select the country:
+          <div class="form-group">
+            <select class="form-control" id="set-country-country">
+              {{# each countries }}
+              <option value="{{ code }}">{{ name }}</option>
+              {{/each}}
+            </select>
+          </div>
+        </li>
+        <li>Select the widgets.</li>
+        <li>Click the button again to finish.</li>
+      </ol>
     </div>
   {{/if}}
 {{/if}}
