make whole widget selectable

--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -105,6 +105,7 @@ body.widgetsembed {
     bottom: 0;
     right: 0;
     left: 0;
+    cursor: pointer;
 
     .select-check {
       position: absolute;
