not all alerts are special

--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -121,7 +121,7 @@ a.btn-add-widget {
   z-index: 1000;
 }
 
-.alert {
+.alert:not(.at-error) {
   z-index: 1050;
   position: fixed;
   bottom: 34px;
