do not add new dash in back and add page titles - #12625, #12614, #12585

--- a/client/templates/head.html
+++ b/client/templates/head.html
@@ -1,8 +1,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="description" content="Internet Dashboard">
+  <meta name="description" content="Internet Monitor Dashboard">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Internet Dashboard</title>
+  <title>Internet Monitor Dashboard</title>
 </head>
 
