--- a/client/templates/dashboard_settings.html
+++ b/client/templates/dashboard_settings.html
@@ -34,8 +34,9 @@
             {{ owner.username }}
             {{/if}}
           {{else}}
-            This dashboard was created anonymously. Anyone with the link can view and
-            edit this dashboard.
+            This dashboard was created anonymously. That means anyone with the
+            link can view and edit this dashboard, and you should save this
+            link as it will not show in any dashboard listings.
           {{/if}}
           </dd>
         </dl>
