add tor widget back and add categories - #12449, #12460

--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -11,7 +11,7 @@
           {{# if onDashboard }}
           <a class="btn btn-warning navbar-btn new-dashboard" id="copy-dashboard"
              title="Make a new copy of this dashboard">
-            Duplicate
+            Clone
           </a>
           {{/if}}
           {{# if notHome }}
