color widgets by category - #12458

--- a/client/css/add_widget.css.less
+++ b/client/css/add_widget.css.less
@@ -36,7 +36,7 @@
         margin-top: 0;
         font-size: 1.5em;
       }
-      
+
       p {
         max-height: 40%;
       }
@@ -50,9 +50,22 @@
         }
       }
 
-      .provided-by {
+      footer {
         position: absolute;
-        bottom: 10px;
+        bottom: 0;
+        left: 0;
+        right: 0;
+
+        .provided-by {
+          padding: 0.2em 1em;
+        }
+
+        .package-category {
+          padding: 0em 0.4em;
+          line-height: 14px;
+          height: 16px;
+          text-align: right;
+        }
       }
     }
   }
