--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -63,17 +63,20 @@ body.widgetsembed {
         }
       }
     }
+
     .data-source {
       padding: 0;
       margin: 0;
       padding-right: 6px;
       float: right;
       z-index: 1000;
-      pointer-events: none;
+    }
 
-      a {
-        pointer-events: auto;
-      }
+    .widget-category-label {
+      float: right;
+      width: 13px;
+      height: 100%;
+      box-shadow: inset 2px -1px 3px rgba(0, 0, 0, 0.15);
     }
   }
 
