add global voices widget - #11991

--- a/packages/global-voices/client/widget.css.less
+++ b/packages/global-voices/client/widget.css.less
@@ -1,9 +1,4 @@
-.feed {
-  .feed-no-feed {
-    font-size: 1.2em;
-    margin: 1.5em;
-  }
-
+.global-voices {
   .feed-item {
     padding: 0.3em 2em 0.6em;
     margin: 0 -20px;
