--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -9,7 +9,7 @@
         </div>
         <div class="navbar-right">
           {{# if onDashboard }}
-          <a class="btn btn-warning navbar-btn new-dashboard" id="copy-dashboard"
+          <a class="btn btn-warning navbar-btn" id="copy-dashboard"
              title="Make a new copy of this dashboard">
             Clone
           </a>
@@ -21,7 +21,7 @@
           </a>
           {{/if}}
           {{# if currentUser }}
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav pull-right">
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                   role="button" aria-haspopup="true" aria-expanded="false">
@@ -35,7 +35,7 @@
                     <a href="{{ pathFor route='users.dashboards' }}">My Dashboards</a>
                   </li>
                   <li role="separator" class="divider"></li>
-                  <li><a class="sign-out" id="sign-out">Sign Out</a></li>
+                  <li><a href="#" class="sign-out" id="sign-out">Sign Out</a></li>
                 </ul>
               </li>
             </ul>
