--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -97,6 +97,10 @@ body.widgetsembed {
       z-index: 1000;
       background-color: rgba(255, 255, 255, 0.8);
     }
+
+    .resizable {
+      transform-origin: left top;
+    }
   }
 
   .selecting-cover {
