add widget type icons - #12146

--- a/client/css/add_widget.css.less
+++ b/client/css/add_widget.css.less
@@ -50,6 +50,7 @@
         }
       }
 
+
       footer {
         position: absolute;
         bottom: 0;
@@ -57,7 +58,7 @@
         right: 0;
 
         .provided-by {
-          padding: 0.2em 1em;
+          padding: 0.2em 4.3em 0.2em 1em;
         }
 
         .package-category {
@@ -65,6 +66,18 @@
           line-height: 14px;
           height: 16px;
           text-align: right;
+        }
+
+        .widget-type-icon.fa {
+          font-size: 2.2em;
+          color: #E4E4E4;
+          position: absolute;
+          bottom: 5px;
+          right: 8px;
+        }
+
+        .package-category ~ .widget-type-icon {
+          bottom: 20px;
         }
       }
     }
