sort by name - #12683

--- a/client/templates/add_widget.html
+++ b/client/templates/add_widget.html
@@ -18,11 +18,11 @@
         <div class="btn-toolbar" role="toolbar">
           <span class="btn-group-label">Sort by</span>
           <div class="btn-group sort-by-btn-group" role="group" aria-label="Sort by">
-            <button type="button" data-sort-by="original-order" class="active btn btn-default">Featured</button>
-            <button type="button" data-sort-by="name" class="btn btn-default">Name</button>
+            <button type="button" data-sort-by="name" class="active btn btn-default">Name</button>
             <button type="button" data-sort-by="category" class="btn btn-default">Category</button>
             <button type="button" data-sort-by="org" class="btn btn-default">Data Provider</button>
             <button type="button" data-sort-by="type" class="btn btn-default">Type</button>
+            <button type="button" data-sort-by="original-order" class="btn btn-default">Featured</button>
           </div>
         </div>
         <ul class="add-widget-grid">
