make recently added - #12682

--- a/client/templates/add_widget.html
+++ b/client/templates/add_widget.html
@@ -22,7 +22,7 @@
             <button type="button" data-sort-by="category" class="btn btn-default">Category</button>
             <button type="button" data-sort-by="org" class="btn btn-default">Data Provider</button>
             <button type="button" data-sort-by="type" class="btn btn-default">Type</button>
-            <button type="button" data-sort-by="original-order" class="btn btn-default">Featured</button>
+            <button type="button" data-sort-by="original-order" class="btn btn-default">Recently Added</button>
           </div>
         </div>
         <ul class="add-widget-grid">
