add better imon branding to embeds - #12498

--- a/packages/widget/client/embed.css.less
+++ b/packages/widget/client/embed.css.less
@@ -10,5 +10,23 @@ body.widgetsembed {
   .title-bar {
     cursor: default;
   }
+
+  .imon-branding {
+    text-align: center;
+    padding: 5px 0;
+    background-color: #F1F1F1;
+  }
+
+  .logo-image {
+    background: url("/imon_logo_banner.png");
+    background-size: cover;
+    display: inline-block;
+    height: 23px;
+    width: 220px;
+
+    &:hover {
+      background-position: 0 -23px;
+    }
+  }
 }
 
