--- a/client/css/user_dashboards.css.less
+++ b/client/css/user_dashboards.css.less
@@ -2,4 +2,14 @@
   .fa-check {
     font-size: 1.1em;
   }
+
+  .popover {
+    .popover-content {
+      text-align: center;
+      
+      a {
+        margin-bottom: 0.7em;
+      }
+    }
+  }
 }
