--- a/client/templates/sign_in_or_anon.html
+++ b/client/templates/sign_in_or_anon.html
@@ -46,7 +46,7 @@
           </div>
           <div class="col-sm-6 text-center">
             <a class="btn btn-success btn-lg"
-               href="{{ pathFor route='dashboards.new' }}">
+               href="{{ pathFor route='dashboards-new' }}">
               Continue
             </a>
           </div>
