--- a/packages/widget/client/embed.css.less
+++ b/packages/widget/client/embed.css.less
@@ -1,7 +1,11 @@
-body.widgetsembed {
+body.widgets-embed {
   background-color: transparent;
   padding-top: 0;
   overflow-y: hidden;
+
+  .widget {
+    border-radius: 0;
+  }
 
   .widget-info {
     font-size: 0.8em;
