--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -6,7 +6,7 @@
     dashboards of data visualizations about multiple facets of the Internet.</p>
     {{# if currentUser }}
       <div class="text-center">
-        <a class="btn btn-success btn-lg" href="{{ pathFor route='dashboards.new' }}">
+        <a class="btn btn-success btn-lg" href="{{ pathFor route='dashboards-new' }}">
           Get Started
         </a>
       </div>
